infrastructure/security/nginx-test/service.yaml
#File: infrastructure/security/nginx-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-test
  namespace: nginx-test
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  type: LoadBalancer
  loadBalancerClass: io.cilium/l2-announcer
  selector:
    app: nginx-test
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
