infrastructure/security/nginx-test/httproute.yaml
# File: infrastructure/security/nginx-test/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-test
  namespace: nginx-test
spec:
  parentRefs:
    - name: gateway-external
      namespace: gateway
  hostnames:
    - "www-test.homelabjunkie.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx-test
          port: 80
